# WechatArticle

./: .gitignore  README.md  config.yaml  main.py  pyproject.toml
.github/workflows/: ci.yml
content/: INDEX.md
content/2026-04-17/ai-code-duplication/: PUBLISH_GUIDE.md  XHS_PUBLISH_GUIDE.md  article.md  image_plan.json  jike-version.md  jike_prompt.txt  meta.json  xhs-prompts.md  xhs-version.md
content/2026-04-17/ai-code-duplication/images/xhs/: analysis.md  outline.md
content/2026-04-17/ai-code-duplication/imgs/: batch.json  outline.md
content/2026-04-17/ai-code-duplication/imgs/prompts/: 01-comparison-two-ais.md  02-comparison-codex-pragmatic.md  03-comparison-claude-perfectionist.md  (+3 more)
content/2026-04-17/人工智能如何改变教育/: meta.json  outline_prompt.txt
content/2026-04-18/hello-lumiq/: article.md  meta.json
content/2026-04-18/hello-lumiq-v2/: JIKE_PUBLISH_GUIDE.md  PROMPT_LIST.md  PUBLISH_GUIDE.md  XHS_PUBLISH_GUIDE.md  article.md  jike-version.md  meta.json  xhs-prompts.md  xhs-version.md
content/2026-04-18/hello-lumiq-v2/images/: batch.json
content/2026-04-18/hello-lumiq-v2/prompts/: 01-cover.md  02-dusty-laptop.md  03-ai-helping.md  04-mindset-shift.md  05-light-door.md
content/2026-04-28/avatar-design/: batch.json
content/2026-04-28/avatar-design/prompts/: 01-lq-monogram.md  02-prism-light.md  03-spark-icon.md
content/2026-04-28/测试选题/: meta.json
src/: cli.py  config.py  generator.py  illustrator.py  output.py  xhs_generator.py
tests/: test_cli.py  test_config.py  test_generator.py  test_illustrator.py  test_output.py  test_xhs_generator.py
(+8 files in other folders)
